[package]
name = "git_ops"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.22", features = ["derive"]}
crossterm = "0.28.1"
dotenv = "0.15.0"
futures-lite = "2.5.0"
ratatui = {version = "0.29.0", features = ["crossterm", "termion"] }
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
terminal = "0.2.1"
tokio = { version = "1.42.0", features = ["full"] }

